public/css/common.css
/* ... */
.badge.bg.Open {
    background-color: #3ec9d6 !important;
}

.badge.bg.Sent {
    background-color: #46b119 !important;
}

.badge.bg.Close {
    background-color: #f6225a !important;
}

#estimation-edit-table .dropdown-menu.show {
    position: absolute !important;
    bottom: 10px !important;
    top: unset !important;
    left: unset !important;
    right: 25px !important;
    transform: unset !important;
}

.dropdown-menu .dropdown-item {
    text-wrap: wrap;
    padding-left: 43px;
}

.dropdown-menu .dropdown-item input,
.dropdown-menu .dropdown-item i {
    position: absolute;
    margin-left: -25px;
    margin-top: 2px;
}

.dropdown-menu .dropdown-item i {
    position: absolute;
    margin-left: -30px;
    margin-top: 2px;
}

.invoice_address2 {
    border-left: 1px solid #f1f1f1;
    padding-left: 20px !important;
}

.project-detail-dashboard .btn {
    background: #ffffff14;
    border: none;
}

.project-detail-dashboard .btn:hover {
    background: #00000030;
}

.project-detail-dashboard .btn i {
    color: #FFF;
}

.project-detail-dashboard {
    position: sticky !important;
    top: 10px;
    z-index: 99;
}

body.project .row {
    margin-left: 0;
    margin-right: 0;
}

.d-sm-flex {
    column-gap: 4px;
}

.dropzone .dz-preview:hover {
    z-index: 9 !important;
}

.projectsTableContainter table#projectsTable .project-comments {
    background-color: #f1f1f1;
    max-width: 250px;
    margin: 0;
    list-style: none;
    text-align: left;
    padding: 5px 10px;
    border-radius: 4px;
    border: 0;
    font-size: 15px;
    max-height: 150px;
    overflow: hidden;
    padding-left: 25px;
    transition: 0.4s;
}

.projectsTableContainter table#projectsTable .project-comments:hover {
    transition: 0.6s;
    overflow-y: auto;
    max-height: 450px;
    max-width: 550px;
}

.projectsTableContainter table#projectsTable .project-comments li {
    list-style: disc;
    margin-bottom: 10px;
}

.range-input {
    display: flex;
    align-items: center;
}

.range-input .range-input-selector {
    transition: 0.6s;
}

.range-input .range-input-selector.increased-width {
    width: 400px !important;
    transition: 4s;
    transition-delay: 0.8s;
}

.range-input .range-output-value {
    display: none;
    position: relative;
    width: 60px;
    color: #fff;
    line-height: 20px;
    text-align: center;
    border-radius: 3px;
    background: #2c3e50;
    padding: 5px 10px;
    margin-left: 8px;
    text-wrap: nowrap;
}

.range-input .range-output-value::before {
    position: absolute;
    top: 8px;
    left: -6px;
    width: 0;
    height: 0;
    border-top: 7px solid transparent;
    border-right: 7px solid #2c3e50;
    border-bottom: 7px solid transparent;
    content: "";
}

.projectsTableContainter>.card-body {
    padding: 0 !important;
    overflow: auto !important;
}

nav.dash-sidebar .dash-item-tabs .nav-item .nav-link {
    padding: 4px 16px 4px 10px;
    width: auto;
    height: auto;
}

nav.dash-sidebar .dash-item-tabs {
    gap: 4px;
    margin: 10px 0 0 20px !important;
    padding: 0 !important;
}


/* PROJECTS.CSS */

#projectsTable .data-thubmnail {
    width: 100px;
    height: 70px;
    overflow: hidden;
    border-radius: 70px;
    background: #f9f9f9;
}

#projectsTable .data-thubmnail img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.project.index div.dt-container div.dt-layout-cell {
    padding: 0
}

table#projectsTable>thead>tr>th,
table#projectsTable>thead>tr>td {
    border: none;
}

.card.projectsTableContainter {
    border-radius: 10px;
    overflow: hidden;
    border: 1px solid #FFF;
    overflow: visible;
}

table#projectsTable {
    width: 100% !important;
}

table#projectsTable>thead {}

.project.index div#status-tabs {
    margin: 0 20px 7px 20px !important;
    height: 50px;
    transition: 0.3s;
}


tr.theader th {
    background: #0000000f !important;
}

table#projectsTable input,
table#projectsTable select {
    padding: 5px 10px;
    font-size: 14px !important;
    border-radius: 5px;
}

table#projectsTable thead input,
table#projectsTable thead input::placeholder,
table#projectsTable thead select,
table#projectsTable thead .select2 .select2-selection {
    padding: 5px;
    font-size: 14px !important;
    border-radius: 5px;
    font-weight: 500;
    color: #999 !important;
    border: none !important;
    height: auto;
}

table#projectsTable .select2 .select2-selection .select2-selection__rendered {
    padding: 0 17px 0 5px;
    line-height: 20px !important;
    font-size: 14px !important;
    font-weight: 500 !important;
    color: #999 !important;
}

table#projectsTable span.data-project-status,
table#projectsTable span.data-project-priority {
    padding: 5px;
    border-radius: 5px;
}

table#projectsTable .select2.select2-container--default {
    padding: 0 !important;
    margin: 0 !important;
    border-radius: 5px;
}

.project.index .dt-length select {
    position: absolute;
    right: 13px;
    width: 70px;
    top: 39px;
    background: #FFF;
    border: none !important;
    color: #999;
}

/*.project.index .dt-length label {
    display: none;
}
.project.index .dt-length select {
    position: absolute;
    right: 13px;
    width: 70px;
    top: 19px;
    background: #FFF;
    border: none !important;
    color: #999;
}*/







/* PROJECTS.CSS END */

